@@ -6,7 +6,7 @@
  * @category   Core
  * @package    org.sabel.core
  * @author     Mori Reo <mori.reo@sabel.jp>
- * @author     Ebine Yutaka <ebine.yutaka@sabel.jp>
+ * @author     Ebine Yutaka <yutaka@ebine.org>
  * @copyright  2004-2008 Mori Reo <mori.reo@sabel.jp>
  * @license    http://www.opensource.org/licenses/bsd-license.php  BSD License
  */
