@@ -1,7 +1,7 @@
 #!/bin/sh
 
 if [ -z "$SABEL_HOME" ] ; then
-  SABEL_HOME="/path/to/Sabel"
+  SABEL_HOME="./Sabel"
 fi
 
 if (test -z "$PHP_COMMAND") ; then
