@@ -8,7 +8,7 @@ Sabel::fileUsing("tasks" . DS . "Tests.php", true);
  * @category   Sakle
  * @package    org.sabel.sakle
  * @author     Mori Reo <mori.reo@sabel.jp>
- * @author     Ebine Yutaka <ebine.yutaka@sabel.jp>
+ * @author     Ebine Yutaka <yutaka@ebine.org>
  * @copyright  2004-2008 Mori Reo <mori.reo@sabel.jp>
  * @license    http://www.opensource.org/licenses/bsd-license.php  BSD License
  */
