@@ -5,7 +5,7 @@
  *
  * @category   Test
  * @package    org.sabel.test
- * @author     Ebine Yutaka <ebine.yutaka@sabel.jp>
+ * @author     Ebine Yutaka <yutaka@ebine.org>
  * @copyright  2004-2008 Mori Reo <mori.reo@sabel.jp>
  * @license    http://www.opensource.org/licenses/bsd-license.php  BSD License
  */
@@ -16,11 +16,13 @@ class Sabel_Test_Fixture extends Sabel_Object
   
   public function __construct()
   {
-    if ($this->modelName === "") {
-      $this->modelName = substr($this->getName(), 8);
+    if ($this->model !== false) {
+      if ($this->modelName === "") {
+        $this->modelName = substr($this->getName(), 8);
+      }
+      
+      $this->model = MODEL($this->modelName);
     }
-    
-    $this->model = MODEL($this->modelName);
   }
   
   public function initialize()
